--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ allprojects {
     }
 }
 
-group 'com.test'
+group 'com.com.test'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -36,7 +36,5 @@ repositories {
 }
 
 dependencies {
-    runtime('mysql:mysql-connector-java')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile('org.springframework.boot:spring-boot-starter-web')
 }
